--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -4,13 +4,15 @@
 
 @media only screen and (max-width: 688px) {
 	.slider-img {
-		height: 40vh;
+		height: 50vh;
 	}
 	.silder-title {
-		font-size: 30px !important;
+		font-size: 25px !important;
+		padding-top: 20px !important;
 	}
 	#slider-para {
 		width: 100% !important;
+		font-weight: 400;
 	}
 	#slider-btn {
 		padding: 5px 10px !important;
@@ -18,6 +20,7 @@
 	}
 	.course-title {
 		width: 100% !important;
+		font-weight: normal;
 	}
 	.course-text {
 		width: 100% !important;
@@ -48,7 +51,7 @@
 
 @media only screen and (min-width: 689px) and (max-width: 992px) {
 	.slider-img {
-		height: 40vh;
+		height: 50vh;
 	}
 	.silder-title {
 		font-size: 50px !important;
@@ -58,6 +61,7 @@
 	}
 	.course-title {
 		width: 100% !important;
+		font-weight: normal;
 	}
 	.course-text {
 		width: 80% !important;
